# woertle

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml
scripts/: init_db.py
templates/: index.html
woertle/: app.py
woertle/templates/: index.html
woertle/utils/: utils.py
